[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = ""
homepage = "https://github.com/SaitoTsutomu/range-digit"
license = "MIT"
name = "range-digit"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
flake8 = "^6.0"
isort = "^5.12"
jupyterlab = "^4.0"
mypy = "^1.3"
pytest = "^7.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
