[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = ""
homepage = "https://github.com/SaitoTsutomu/range-digit"
license = "Apache-2.0"
name = "range-digit"
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
flake8 = "^7.0"
isort = "^5.13"
jupyterlab = "^4.0"
mypy = "^1.8"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
